--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,8 @@
 body {
   background-color: var(--primary-white-color);
   color: var(--title-text-color);
-}
 
-.list {
-  list-style: none;
+  font-family: Roboto, sans-serif;
 }
 
 /* Logo */
@@ -24,12 +22,24 @@ body {
 
 .logo {
   color: var(--title-text-color);
+  font-family: Raleway;
+
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-decoration: none;
 }
 
 /* Site nav */
 
 .site-nav .link {
   color: var(--title-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 0, 14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .site-nav .link:hover,
@@ -41,13 +51,35 @@ body {
   color: var(--accent-color);
 }
 
+.list {
+  list-style: none;
+}
+
 .auth-nav .list {
   color: var(--lead-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 0, 14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .auth-nav .link:hover,
 .auth-nav .link:focus {
   color: var(--accent-color);
+}
+
+/* Hero */
+
+.hero-title {
+  color: var(--primary-white-color);
+  background-color: var(--background-color);
+
+  font-size: 44px;
+  line-height: 1, 36;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* Button */
@@ -56,6 +88,10 @@ body {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   cursor: pointer;
+
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
 }
 
 .button-nav .link:hover,
@@ -70,8 +106,73 @@ body {
   cursor: pointer;
 }
 
+/* Features */
+
+.features-title {
+  font-size: 14px;
+  line-height: 0, 14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.features-description {
+  color: var(--lead-text-color);
+
+  font-size: 14px;
+  line-height: 1, 71;
+  letter-spacing: 0.03em;
+}
+
+/* Work */
+
+.section-title {
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 /* Team section */
 
-.section-team {
+.team-section {
   background-color: var(--secondary-background-color);
+}
+
+.team-title {
+  font-size: 16px;
+  line-height: 1, 18;
+  letter-spacing: 0.03em;
+}
+
+.team-description {
+  color: var(--lead-text-color);
+}
+
+/* Footer */
+
+.footer-section {
+  background-color: var(--background-color);
+}
+
+.footer-logo {
+  color: var(--primary-white-color);
+}
+
+.adress-info {
+  color: var(--primary-white-color);
+  text-decoration: none;
+}
+
+.contacts {
+  color: var(--lead-text-color);
+
+  font-size: 14px;
+  line-height: 1, 71;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+
+/* Projects */
+
+.projects-description {
 }
