--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
 /* Logo */
 
 .accent {
@@ -49,10 +57,6 @@ body {
 
 .site-nav .link.current {
   color: var(--accent-color);
-}
-
-.list {
-  list-style: none;
 }
 
 .auth-nav .list {
