--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,10 @@ body {
   text-decoration: none;
   color: inherit;
 }
+
+.projects-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
