--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --secondary-background-color: #f5f4fa;
   --background-color: #2f303a;
   --background-button: #188ce8;
+  --footer-text-color: rgba(255, 255, 255, 0.6);
 }
 
 body {
@@ -192,7 +193,7 @@ body {
 }
 
 .contacts {
-  color: var(--lead-text-color);
+  color: var(--footer-text-color);
 }
 
 /* Projects */
