--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,9 @@ body {
 /* Features */
 
 .features-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
   text-transform: uppercase;
 }
 
